# tsanet

./: .gitignore  CHANGELOG.md  CONTRIBUTION.md  README.md  pyproject.toml  tsanet-ctl.py  tsanet-gui.py  tsanet-hub.py
.github/workflows/: ci.yml  release.yml
examples/: README.md  apply_ctl_settings.sh  controller.yaml  hub.yaml
src/tsanet/common/: config.py  errors.py  logging.py
src/tsanet/controller/: config.py  marker_lookup.py  parse.py  rpc_client.py  stats.py  sweep_warning.py  trace_hold.py
src/tsanet/controller/cli/: app.py
src/tsanet/controller/gui/: app.py  capture_viewer.py  connection_dialog.py  device_panel.py  live_graph.py  main_window.py  spectrum_panel.py  stats_dialog.py
src/tsanet/device/: adapter.py  discovery.py  model.py  parsing.py  png.py  rgb565.py  transport.py
src/tsanet/device/commands/: capture.py  device.py  marker.py  menu.py  preset.py  raw.py  signal.py  sweep.py  trace.py
src/tsanet/hub/: cli.py  config.py  dispatcher.py  registry.py  scanraw_subscription.py  server.py  session.py  subscriptions.py
src/tsanet/protocol/: codec.py  messages.py  security.py  transport.py
tests/: conftest.py  fakeserial.py  test_codec.py  test_colormap_availability.py  test_commands.py  test_config.py  test_controller_cli.py  test_controller_parse.py  test_controller_rpc.py  test_controller_stats.py  test_discovery.py  test_dispatcher.py  test_gui_sweep_warning.py  test_hardware.py  test_hub_server.py  test_marker_lookup.py  test_model.py  test_protocol_transport.py  test_registry.py  test_rgb565.py  test_rpc_client_threading.py  test_security.py  test_session.py  test_smoke.py  test_spectrum_panel_threading.py  test_subscriptions.py  test_trace_hold.py  test_transport.py
