[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsanet"
dynamic = ["version"]
description = "Network control suite for tinySA Ultra spectrum analyzers"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "msgpack>=1",
    "pyyaml>=6",
]

[project.optional-dependencies]
hub = ["pyserial>=3.5"]
cli = ["typer>=0.12"]
gui = ["PySide6>=6.5", "pyqtgraph>=0.13"]
all = ["tsanet[hub,cli,gui]"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
tsanet-hub = "tsanet.hub.cli:main"
tsanet-ctl = "tsanet.controller.cli.app:main"
tsanet-gui = "tsanet.controller.gui.app:main"

[tool.hatch.version]
path = "src/tsanet/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tsanet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
