[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsanet"
dynamic = ["version"]
description = "Network control suite for tinySA Ultra spectrum analyzers"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "msgpack>=1",
    "pyyaml>=6",
    "pyserial>=3.5",
    "typer>=0.12",
    "tsapython>=3",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5", "pyqtgraph>=0.13"]
all = ["tsanet[gui]"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "twine>=6"]

[project.scripts]
tsanet-hub = "tsanet.hub.cli:main"
tsanet-ctl = "tsanet.controller.cli.app:main"
tsanet-gui = "tsanet.controller.gui.app:main"

[tool.hatch.version]
path = "src/tsanet/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tsanet"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "tsanet-hub.py",
    "tsanet-ctl.py",
    "tsanet-gui.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
